--- a/src/FarmCraft.Community.WebPortal/Shared/MainLayout.razor
+++ b/src/FarmCraft.Community.WebPortal/Shared/MainLayout.razor
@@ -1,19 +1,31 @@
-﻿@inherits LayoutComponentBase
+﻿@*@using FarmCraft.Community.WebPortal.Services*@
+
+@*@inherits LayoutComponentBase*@
+@inherits MainLayoutBase
+
+@*@inject FarmCraftAuthenticationStateProvider AuthStateProvider*@
 
 <PageTitle>FarmCraft.Community.WebPortal</PageTitle>
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<AuthorizeView>
+    <Authorized>
+        <div class="page">
+            <div class="sidebar">
+                <NavMenu />
+            </div>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <main>
+                <div class="top-row px-4">
+                    <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+                </div>
+
+                <article class="content px-4">
+                    @Body
+                </article>
+            </main>
         </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+    </Authorized>
+    <NotAuthorized>
+        <FarmCraft.Community.WebPortal.Pages.Login />
+    </NotAuthorized>
+</AuthorizeView>
