--- a/src/FarmCraft.Community.WebPortal/Pages/_Layout.cshtml
+++ b/src/FarmCraft.Community.WebPortal/Pages/_Layout.cshtml
@@ -11,7 +11,13 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="FarmCraft.Community.WebPortal.styles.css" rel="stylesheet" />
-    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+
+    @*Mudblazor*@
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+
+    @*<component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />*@
+    <component type="typeof(HeadOutlet)" render-mode="Server" />
 </head>
 <body>
     @RenderBody()
@@ -28,5 +34,14 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script>
+        window.getDimensions = () => {
+            return {
+                width: window.innerWidth,
+                height: window.innerHeight
+            }
+        }
+    </script>
 </body>
 </html>
