--- a/src/FarmCraft.Community.WebPortal/Shared/MainLayout.razor.css
+++ b/src/FarmCraft.Community.WebPortal/Shared/MainLayout.razor.css
@@ -1,3 +1,11 @@
+.content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
 .page {
     position: relative;
     display: flex;
