--- a/src/FarmCraft.Community.WebPortal/_Imports.razor
+++ b/src/FarmCraft.Community.WebPortal/_Imports.razor
@@ -6,5 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using MudBlazor
 @using FarmCraft.Community.WebPortal
 @using FarmCraft.Community.WebPortal.Shared
