--- a/src/FarmCraft.Community.WebPortal/wwwroot/css/site.css
+++ b/src/FarmCraft.Community.WebPortal/wwwroot/css/site.css
@@ -1,6 +1,9 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
+    height: 100%
+}
+/*html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
@@ -62,3 +65,4 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+*/
